--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -2689,7 +2689,8 @@ $b\in\mathbf{S}$, we set $a\overset{\ast}{\Rrightarrow}b$ if and only if there
 exists a sequence $\left(  a_{0},a_{1},\ldots,a_{n}\right)  $ of elements of
 $\mathbf{S}$ such that $a_{0}=a$ and $a_{n}=b$ and such that every
 $i\in\left\{  0,1,\ldots,n-1\right\}  $ satisfies $a_{i}\Rrightarrow a_{i+1}$.
-(In other words, we define $\overset{\ast}{\Rrightarrow}$ as the
+\ \ \ \ \footnotemark\ (In other words, we define
+$\overset{\ast}{\Rrightarrow}$ as the
 reflexive-and-transitive closure of the relation $\Rrightarrow$.)
 
 Assume that the following two hypotheses are true:
@@ -2712,6 +2713,7 @@ Then, for every $a\in\mathbf{S}$, there exists a unique final element
 $b\in\mathbf{S}$ such that $a\overset{\ast}{\Rrightarrow}b$.
 \end{lemma}
 
+\footnotetext{Notice that $n$ is allowed to be $0$ here.}
 Lemma \ref{lem.diamond} is an easy particular case of what is called
 \textit{Newman's lemma} (see, e.g., \cite{BezCoq}, or \cite[Lemma 2.7.2 + Fact
 2.1.7]{BaaNip98}).\footnote{In the general version, the finiteness of
